--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: flextrkr
+name: pyflextrkr
 channels:
   - conda-forge
 dependencies:
@@ -23,4 +23,3 @@ dependencies:
   - scikit-learn
   - ffmpeg
   - xesmf
-  - wrf-python
