--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,24 @@
-numpy>=1.17
-matplotlib>=3
-xarray>=0.14
-pandas>=0.25
-scipy>=1.4
-netcdf4>=1.5
-pytz>=2019
-cartopy>=0.17
-dask>=2.9
-scikit-image>=0.22
-joblib>=0.14
-ipython>=7.0
-setuptools>=65.5.1
-PyYAML>=5.4
-pip
 astropy
+cartopy
 colorcet
 colormath
-seaborn
-scikit-learn
+dask
 ffmpeg
+healpix
+ipython
+joblib
+matplotlib
+netcdf4
+numpy
+pandas
+pip
+pytz
+PyYAML
+scikit-image>=0.22
+scikit-learn
+scipy>=1.4
+seaborn
+setuptools
+xarray>=2025.1.2
 xesmf>=0.8
+zarr
