--- a/config/config_mcs_pinacles_example.yml
+++ b/config/config_mcs_pinacles_example.yml
@@ -23,8 +23,8 @@ timeout: 360  # [seconds] Dask timeout limit
 run_preprocess: False
 
 # Start/end date and time
-startdate: '20000130.0000'
-enddate: '20000201.0000'
+startdate: '19700211.0000'
+enddate: '19700216.0000'
 
 # Specify tracking input data date/time string format
 # This is the preprocessed file that contains Tb & rainrate
@@ -34,9 +34,9 @@ time_format: 'yyyy-mo-ddThh-mm-ss'
 databasename:  'processed2d_'
 
 # Input files directory
-clouddata_path: '/pscratch/sd/p/paccini/temp/output_pinacles/slices_olr_rain/'
+clouddata_path: '/pscratch/sd/p/paccini/temp/output_pinacles/slices_olr_rain/test_600x600/'
 # Working directory for the tracking data
-root_path: '/pscratch/sd/p/paccini/temp/output_tracking/tracking_cloud_rain_pbc_final_3/'
+root_path: '/pscratch/sd/p/paccini/temp/output_tracking/tracking_cloud_rain_pbc_600x600_review/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
@@ -45,12 +45,12 @@ pixel_path_name: 'mcstracking'
 
 # Input dataset structure
 pixel_radius:  1.0  # [km] Spatial resolution of the input data
-datatimeresolution: 0.16667  # [hour] Temporal resolution of the input data
+datatimeresolution: 1  # [hour] Temporal resolution of the input data
 # Variable names in the input data
 olr2tb: True
-olr_varname: 'LW_UP_TOA'
+olr_varname: 'toa_lw_up'
 #tb_varname:  'toa_lw_up'
-pcp_varname: 'RAINNC'
+pcp_varname: 'pr'
 clouddatasource: 'model'
 time_dimname: 'time'
 x_dimname: 'X'
@@ -83,21 +83,24 @@ warmanvilexpansion:  0  # Not working yet, set this to 0 for now
 cloudidmethod: 'label_grow'
 # Specific parameters to link cloud objects using PF
 linkpf:  1  # Set to 1 to turn on linkpf option; default: 0
-pcp_convert_factor: 6 # Convert precipitation factor to unit [mm/hour]
+pcp_convert_factor: 1 # Convert precipitation factor to unit [mm/hour]
 pf_smooth_window:  5  # Smoothing window for identifying PF
 pf_dbz_thresh:  2  # [dBZ] for reflectivity, or [mm/h] for rainrate
 pf_link_area_thresh:  148.0  # [km^2]
 
 # Periodic boundary conditions parameters
 pbc_direction: 'both'  #options are 'x', 'y', 'both' and 'none'
-extended_fraction: 1
-domain_max: 600000
+pbc_extended_fraction: 1
+# Fraction of the domain to wrap feature position 
+# If feature center movement between two time steps > max_domain_fraction * domain size,
+# the feature position will be wrapped to the other side of the domain
+pbc_max_domain_fraction: 0.5    # (range: 0 to 1)
 
 # Tracking parameters
 othresh: 0.5  # overlap fraction threshold. Clouds that overlap more than this between times are tracked.
 timegap: 3.1  # [hour] If missing data duration longer than this, tracking restarts
 nmaxlinks: 50  # Maximum number of clouds that any single cloud can be linked to
-maxnclouds:  3000  # Maximum number of clouds in one snapshot
+maxnclouds:  1000  # Maximum number of clouds in one snapshot
 duration_range: [2, 100] # A vector [minlength,maxlength] to specify the duration range for the tracks
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
 # 0:keep all tracks; 1:remove short tracks
@@ -110,9 +113,9 @@ match_pixel_dt_thresh: 60.0  # seconds
 
 # MCS Tb parameters
 mcs_tb_area_thresh: 10000  # [km^2] Tb area threshold
-mcs_tb_duration_thresh:  0.5  # [hour] Tb minimum length of a mcs
-mcs_tb_split_duration:  0.3  # [hour] Tb tracks smaller or equal to this length will be included with the MCS splits from
-mcs_tb_merge_duration:  0.3  # [hour] Tb tracks smaller or equal to this length will be included with the MCS merges into
+mcs_tb_duration_thresh:  2  # [hour] Tb minimum length of a mcs
+mcs_tb_split_duration:  6  # [hour] Tb tracks smaller or equal to this length will be included with the MCS splits from
+mcs_tb_merge_duration:  6  # [hour] Tb tracks smaller or equal to this length will be included with the MCS merges into
 mcs_tb_gap: 1  # [unitless] Allowable temporal gap in Tb data for MCS area threshold
 # MCS PF parameters
 mcs_pf_majoraxis_thresh:  0  # [km] MCS PF major axis length lower limit
@@ -130,14 +133,7 @@ nmaxcore: 20  # Maximum number of convective cores that can be within a cloud fe
 pcp_thresh:  1.0  # Pixels with hourly precipitation larger than this will be labeled with track number
 heavy_rainrate_thresh:  8.0  # [mm/hr] Heavy rain rate threshold
 mcs_min_rainvol_thresh: 100 #old: 100x100x2, current 10x10x2  #  [km^2 mm/h] Min rain volumne threshold
-mcs_volrain_duration_thresh: 0.3   # [hour] Min volume rain threshold
-
-##UKNOWN
-# coefs_pf_area:  [1874.05, 89.825]
-# coefs_pf_rr:  [3.01657, 0.0144461]  # 5% [recommended]
-# coefs_pf_skew:  [0.194462, 0.0100072]  # 5% [recommended]
-# coefs_pf_heavyratio:  [3.419024, 0.4387090]  # 10% [recommended]
-
+mcs_volrain_duration_thresh: 1  # [hour] Min volume rain threshold
 
 # Define tracked feature variable names
 feature_varname: 'feature_number'
