Completed remap to healpix.
1. Completed pyflextrkr/remap_healpix.py to remap MCS mask Zarr file from lat/lon grid to HEALPix grid.
2. Updated pyflextrkr/convert_to_zarr.py to show Dask progress bar at run time.
3. Added calling additional file conversion functions in runscripts/run_mcs_tbpf_mcsmip.py/
4. Added parameters for Zarr file conversion in config/config_mcs_tbpf_scream_healpix.yml
5. Changed zarr<3.0.0 to be compatible with Hackathon environment in environment.yml and requirements.txt.

--- a/config/config_mcs_tbpf_scream_healpix.yml
+++ b/config/config_mcs_tbpf_scream_healpix.yml
@@ -3,7 +3,7 @@
 # Tracking uses collocated Tb + Precipitation
 
 # Processing steps:
-run_idfeature : False
+run_idfeature : True
 run_tracksingle : False
 run_gettracks : False
 run_trackstats : False
@@ -12,15 +12,15 @@ run_matchpf : False
 run_robustmcs : False
 run_mapfeature : False
 run_speed : False
-run_convert_to_zarr: True
-run_regrid_mask: False
+run_convert_to_zarr: False
+run_remap_healpix: False
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 1
+run_parallel: 0
 nprocesses : 128  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
-timeout: 600  # [seconds] Dask timeout limit
+timeout: 3600  # [seconds] Dask timeout limit
 
 # Start/end date and time
 startdate: '20190901.0000'
@@ -33,6 +33,7 @@ enddate: '20200901.0000'
 time_format: 'yyyymoddhh'
 databasename:  'scream2D_hrly_rlut_hp10_v6'
 precipdata_basename: 'scream2D_hrly_pr_hp10_v6'
+hp_zoomlev: '10'
 input_format: 'zarr'  # 'zarr' or 'netcdf'
 
 # Input files directory
@@ -174,6 +175,7 @@ overwrite_zarr: True  # Overwrite existing Zarr files
 chunksize_time: 24  # time
 chunksize_lat: 240  # y
 chunksize_lon: 600  # x
+chunksize_cell: 'auto'  # HEALPix cell
 # Zarr output presets - configure different outputs
 zarr_output_presets:
   mask:
@@ -196,3 +198,6 @@ zarr_output_presets:
     out_filebase: 'mcs_full_'
     # No var_list needed - all variables will be included
     var_rename: {}  # Optional - add any renaming if needed
+
+  healpix:
+    out_filebase: 'mcs_mask_hp'
