--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,8 @@ dependencies:
   - dask
   - ffmpeg
   - healpix
+  - intake==0.7.0
+  - intake-xarray==0.7.0
   - ipython
   - joblib
   - matplotlib
