--- a/config/config_mcs_tbpf_scream_healpix9.yml
+++ b/config/config_mcs_tbpf_scream_healpix9.yml
@@ -3,27 +3,28 @@
 # Tracking uses collocated Tb + Precipitation
 
 # Processing steps:
-run_idfeature : True
-run_tracksingle : True
-run_gettracks : True
-run_trackstats : True
-run_identifymcs : True
-run_matchpf : True
-run_robustmcs : True
-run_mapfeature : True
-run_speed : True
-run_convert_to_zarr: True
+run_idfeature : False
+run_tracksingle : False
+run_gettracks : False
+run_trackstats : False
+run_identifymcs : False
+run_matchpf : False
+run_robustmcs : False
+run_mapfeature : False
+run_speed : False
+run_convert_to_zarr: False
 run_remap_healpix: True
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 0
+run_parallel: 1
 nprocesses : 128  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 3600  # [seconds] Dask timeout limit
 
 # Start/end date and time
-startdate: '20190901.0000'
+# startdate: '20190901.0000'
+startdate: '20190801.0000'
 enddate: '20200901.0000'
 
 # HEALPix parameters
@@ -117,7 +118,7 @@ othresh: 0.5  # overlap fraction threshold. Clouds that overlap more than this b
 timegap: 3.1  # [hour] If missing data duration longer than this, tracking restarts
 nmaxlinks: 50  # Maximum number of clouds that any single cloud can be linked to
 maxnclouds:  3000  # Maximum number of clouds in one snapshot
-duration_range: [2, 400] # A vector [minlength,maxlength] to specify the duration range for the tracks
+duration_range: [2, 650] # A vector [minlength,maxlength] to specify the duration range for the tracks
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
 # 0:keep all tracks; 1:remove short tracks
 remove_shorttracks: 1
@@ -208,5 +209,8 @@ zarr_output_presets:
     # No var_list needed - all variables will be included
     var_rename: {}  # Optional - add any renaming if needed
 
+  # Remap back to healpix
   healpix:
-    out_filebase: 'mcs_mask_hp'
+    out_filebase: 'scream2D_hrly_mcsmask_'
+    zoom: 6  # zoom level to remap
+    version: 'v1'  # version in zarr filename
